# Disease-prediction

./: Makefile  README.md  pyproject.toml
disease-prediction/: __init__.py  analysis.py  launch.py  model.py  visualization.py
disease-prediction/scripts/: run.py
